--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <!-- banner-image -->
             <div class="w-[40%]">
-                <img src="Images/Summer 1.png" alt="my image" class="w-full" />
+                <img src="images/Summer 1.png" alt="my image" class="w-full" />
             </div>
         </div>
     </section>
@@ -47,7 +47,7 @@
         <div class="mt-4 flex flex-col sm:flex-row gap-4">
         <div class="bg-white p-3 rounded-md flex-1" onclick="handClick(this)">
         <div class="bg-gray-200 rounded-md">
-        <img src="Images/5210242_14551 1.png" alt="" class="p-5 mx-auto" />
+        <img src="images/5210242_14551 1.png" alt="" class="p-5 mx-auto" />
          </div>
         <div class="mt-5 flex gap-1 justify-center mb-1">
             <i class="fa-regular fa-star text-yellow-400"></i>
@@ -61,7 +61,7 @@
             </div>
             <div class="bg-white p-3 rounded-md flex-1" onclick="handClick(this)">
             <div class="bg-gray-200 rounded-md">
-            <img src="Images/4999500_13370 1.png" alt="" class="p-5 mx-auto" />
+            <img src="images/4999500_13370 1.png" alt="" class="p-5 mx-auto" />
             </div>
         <div class="mt-5 flex gap-1 justify-center mb-1">
         <i class="fa-regular fa-star text-yellow-400"></i>
@@ -75,7 +75,7 @@
             </div>
             <div class="bg-white p-3 rounded-md flex-1" onclick="handClick(this)">
             <div class="bg-gray-200 rounded-md">
-            <img src="Images/5037619_13725 1 (1).png" alt="" class="p-5 mx-auto" />
+            <img src="images/5037619_13725 1 (1).png" alt="" class="p-5 mx-auto" />
             </div>
             <div class="mt-5 flex gap-1 justify-center mb-1">
             <i class="fa-regular fa-star text-yellow-400"></i>
@@ -96,7 +96,7 @@
     <div class="mt-4 flex flex-col sm:flex-row gap-4">
     <div class="bg-white p-3 rounded-md flex-1" onclick="handClick(this)">
     <div class="bg-gray-200 rounded-md">
-    <img src="Images/black_cap_isolated_on_background 1.png" alt="" class="p-5 mx-auto" />
+    <img src="images/black_cap_isolated_on_background 1.png" alt="" class="p-5 mx-auto" />
      </div>
  <div class="mt-5 flex gap-1 justify-center mb-1">
  <i class="fa-regular fa-star text-yellow-400"></i>
@@ -110,7 +110,7 @@
             </div>
             <div class="bg-white p-3 rounded-md flex-1" onclick="handClick(this)">
     <div class="bg-gray-200 rounded-md">
-         <img src="Images/18438840_cycling_jersey_mockup_front_side_view 1.png" alt=""
+         <img src="images/18438840_cycling_jersey_mockup_front_side_view 1.png" alt=""
          class="p-5 mx-auto" />
         </div>
         <div class="mt-5 flex gap-1 justify-center mb-1">
@@ -125,7 +125,7 @@
              </div>
             <div class="bg-white p-3 rounded-md flex-1" onclick="handClick(this)">
             <div class="bg-gray-200 rounded-md">
-             <img src="Images/pngwing 1.png" alt="" class="p-5 mx-auto" />
+             <img src="images/pngwing 1.png" alt="" class="p-5 mx-auto" />
             </div>
             <div class="mt-5 flex gap-1 justify-center mb-1">
             <i class="fa-regular fa-star text-yellow-400"></i>
