--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
             <div class="bg-white p-4 rounded-lg">
                 <label class="text-lg font-semibold">Have Coupone?</label>
                 <div class="flex mt-4">
-                    <input type="text" placeholder="Coupone code"
+                    <input id="inputCoupon" type="text" placeholder="Coupone code"
                         class="py-2 px-2 outline-none border border-gray-400 rounded-l-lg" />
-                    <button
+                    <button id="applyBtn"
                         class="text-[14px] px-4 border bg-[#E527B2] py-2 border-[#E527B2] text-white rounded-r-lg cursor-pointer hover:bg-transparent hover:text-gray-700 font-semibold">
                         Apply
                     </button>
@@ -224,7 +224,7 @@
         </li>
         </ol>
 
-        <button
+        <button  id="purchaseBtn"
          class="text-[14px] bg-[#E527B2] py-1.5 border-[#E527B2] text-white rounded-md cursor-pointer hover:bg-transparent hover:text-gray-700 border font-semibold w-full mt-5">
         Make Purchase
                 </button>
